force-app/main/default/objects/Account/fields/AccountExternalId__c.field-meta.xml
<CustomField>
    <fullName>AccountExternalId__c</fullName>
    <description>This will store unique customer_id from Poseidon during Migration.</description>
    <externalId>true</externalId>
    <label>AccountExternalId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>