force-app/main/default/objects/Account/fields/ActiveOpportunities__c.field-meta.xml
<CustomField>
    <fullName>ActiveOpportunities__c</fullName>
    <description>This field counts the number of related Active opportunities.</description>
    <label>ActiveOpportunities</label>
    <summaryFilterItems>
        <field>Opportunity.IsActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Closed Lost, Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>