force-app/main/default/objects/Account/fields/BirthCountry__c.field-meta.xml
<CustomField>
    <fullName>BirthCountry__c</fullName>
    <description>This field is created to select the country of birth</description>
    <label>Country Of Birth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>