force-app/main/default/objects/Account/fields/BookingsinstatusBKN__c.field-meta.xml
<CustomField>
    <fullName>BookingsinstatusBKN__c</fullName>
    <description>This field is used to calculate the number of Bookings linked to the Account which are in status 'BKN'</description>
    <label># Bookings in status BKN</label>
    <summaryFilterItems>
        <field>Booking__c.Status__c</field>
        <operation>equals</operation>
        <value>BKN</value>
    </summaryFilterItems>
    <summaryForeignKey>Booking__c.AccountId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>