force-app/main/default/objects/Account/fields/CombinedPhone__c.field-meta.xml
<CustomField>
    <fullName>CombinedPhone__c</fullName>
    <formula>PersonMobilePhone+' '+PersonHomePhone+' '+PersonOtherPhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combined Phone</label>
    <type>Text</type>
</CustomField>