force-app/main/default/objects/Account/fields/DoNotCall__c.field-meta.xml
<CustomField>
    <fullName>DoNotCall__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to identify when the customer should not be called.</description>
    <inlineHelpText>Check this field if we explicitly do not want to call this customer again or if the customer has requested not to be contacted by phone.</inlineHelpText>
    <label>Do Not Call</label>
    <type>Checkbox</type>
</CustomField>