force-app/main/default/objects/Account/fields/DoNotMail__c.field-meta.xml
<CustomField>
    <fullName>DoNotMail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field stores user preference if they want to get physical mails from us or not.</description>
    <inlineHelpText>Customer does not want to receive post mail from EF or we do explicitly do not want to mail him, e.g. complaint.</inlineHelpText>
    <label>Do Not Mail</label>
    <type>Checkbox</type>
</CustomField>