force-app/main/default/objects/Account/fields/DoubleOptInTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>DoubleOptInTimeStamp__c</fullName>
    <label>DoubleOptInTimeStamp</label>
    <type>DateTime</type>
</CustomField>