force-app/main/default/objects/Account/fields/Email2__c.field-meta.xml
<CustomField>
    <fullName>Email2__c</fullName>
    <description>this field is for the secondary email and replacing student email 2 field</description>
    <label>Email2</label>
    <type>Email</type>
</CustomField>