force-app/main/default/objects/Account/fields/Email2OptOut__c.field-meta.xml
<CustomField>
    <fullName>Email2OptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this field will store if customer opts out of receiving emails on email2 address</description>
    <inlineHelpText>Customer does not want to receive emails from EF</inlineHelpText>
    <label>Email2 Opt Out</label>
    <type>Checkbox</type>
</CustomField>