force-app/main/default/objects/Account/fields/FirstNameEn__c.field-meta.xml
<CustomField>
    <fullName>FirstNameEn__c</fullName>
    <description>This field will show the English translation of First Name.</description>
    <label>First Name En</label>
    <length>30</length>
    <type>Text</type>
</CustomField>