force-app/main/default/objects/Account/fields/HasAddress__c.field-meta.xml
<CustomField>
    <fullName>HasAddress__c</fullName>
    <description>If we don't have address details (Street) of the customer then we should not create an SBR task</description>
    <formula>!( 
 ISBLANK(PersonMailingStreet) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Address</label>
    <type>Checkbox</type>
</CustomField>