force-app/main/default/objects/Account/fields/HasBooking__c.field-meta.xml
<CustomField>
    <fullName>HasBooking__c</fullName>
    <description>This field is used to indicate if this Account has a booking linked to it in status 'BKN'</description>
    <formula>BookingsinstatusBKN__c  &lt;> 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Booking</label>
    <type>Checkbox</type>
</CustomField>