force-app/main/default/objects/Account/fields/HasHappyCallTask__c.field-meta.xml
<CustomField>
    <fullName>HasHappyCallTask__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Happy Call Task</label>
    <type>Checkbox</type>
</CustomField>