force-app/main/default/objects/Account/fields/HasPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>HasPhoneNumber__c</fullName>
    <formula>!( 
ISBLANK(PersonOtherPhone) &amp;&amp; ISBLANK( PersonMobilePhone) &amp;&amp; ISBLANK(Phone) &amp;&amp; ISBLANK(PersonHomePhone) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Phone Number</label>
    <type>Checkbox</type>
</CustomField>