force-app/main/default/objects/Account/fields/InvalidEmail__c.field-meta.xml
<CustomField>
    <fullName>InvalidEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If primary email is invalid</description>
    <label>Invalid Email</label>
    <type>Checkbox</type>
</CustomField>