force-app/main/default/objects/Account/fields/InvoiceEmail__c.field-meta.xml
<CustomField>
    <fullName>InvoiceEmail__c</fullName>
    <description>This field is used to store the email-address to which invoices should be send.</description>
    <label>Invoice Email</label>
    <type>Email</type>
</CustomField>