force-app/main/default/objects/Account/fields/IsAmbassador__c.field-meta.xml
<CustomField>
    <fullName>IsAmbassador__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Ambassador</label>
    <type>Checkbox</type>
</CustomField>