force-app/main/default/objects/Account/fields/IsParent__c.field-meta.xml
<CustomField>
    <fullName>IsParent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Either this account is a parent or a request on ef.com was submitted by a parent</inlineHelpText>
    <label>Is Parent</label>
    <type>Checkbox</type>
</CustomField>