force-app/main/default/objects/Account/fields/IsProtectedIdentity__c.field-meta.xml
<CustomField>
    <fullName>IsProtectedIdentity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If customer has opted in for protect information, if this is true then we should not share contact details of this customer</description>
    <inlineHelpText>This field should be checked if we want to protect the identity of the person. Personal contact details should not be given to anyone if this field is checked.</inlineHelpText>
    <label>Is Protected Identity</label>
    <type>Checkbox</type>
</CustomField>