force-app/main/default/objects/Account/fields/IsSyncedToPoseidon__c.field-meta.xml
<CustomField>
    <fullName>IsSyncedToPoseidon__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used by Integration to mark the check box while updating unique customer ID.</description>
    <label>Is Synced To Poseidon</label>
    <type>Checkbox</type>
</CustomField>