force-app/main/default/objects/Account/fields/LastNameEn__c.field-meta.xml
<CustomField>
    <fullName>LastNameEn__c</fullName>
    <description>This field will show the English translation of Last Name.</description>
    <label>Last Name En</label>
    <length>30</length>
    <type>Text</type>
</CustomField>