force-app/main/default/objects/Account/fields/LatestBooking__c.field-meta.xml
<CustomField>
    <fullName>LatestBooking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Latest Booking that is now in the past</description>
    <label>Latest Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>