force-app/main/default/objects/Account/fields/LatestBooking_AttainedLevel__c.field-meta.xml
<CustomField>
    <fullName>LatestBooking_AttainedLevel__c</fullName>
    <formula>LatestBooking__r.Attainedlevel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Booking Attained level</label>
    <type>Text</type>
</CustomField>