force-app/main/default/objects/Account/fields/LatestBooking_OverAllSatisfied__c.field-meta.xml
<CustomField>
    <fullName>LatestBooking_OverAllSatisfied__c</fullName>
    <formula>Text(LatestBooking__r.OverAllSatisfied__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Booking Over All Satisfied</label>
    <type>Text</type>
</CustomField>