force-app/main/default/objects/Account/fields/LatestBooking_RecommendFriend__c.field-meta.xml
<CustomField>
    <fullName>LatestBooking_RecommendFriend__c</fullName>
    <formula>LatestBooking__r.RecommendFriend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Booking Recommend Friend</label>
    <type>Text</type>
</CustomField>