force-app/main/default/objects/Account/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <defaultValue>$User.TF_Default_Market__c</defaultValue>
    <description>Market to which Lead belongs.</description>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Market</valueSetName>
    </valueSet>
</CustomField>