force-app/main/default/objects/Account/fields/MaxActiveBookingEndDate__c.field-meta.xml
<CustomField>
    <fullName>MaxActiveBookingEndDate__c</fullName>
    <description>The maximum end date of all Active Bookings related to this Account.</description>
    <label>Max Active Booking End Date</label>
    <summarizedField>Booking__c.MaxEndDate__c</summarizedField>
    <summaryFilterItems>
        <field>Booking__c.Status__c</field>
        <operation>equals</operation>
        <value>Booking, Pre Application</value>
    </summaryFilterItems>
    <summaryForeignKey>Booking__c.AccountId__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>