force-app/main/default/objects/Account/fields/MiddleNameEn__c.field-meta.xml
<CustomField>
    <fullName>MiddleNameEn__c</fullName>
    <description>This field will show the English translation of Middle Name.</description>
    <label>Middle Name En</label>
    <length>30</length>
    <type>Text</type>
</CustomField>