force-app/main/default/objects/Account/fields/NumberofOpportunities__c.field-meta.xml
<CustomField>
    <fullName>NumberofOpportunities__c</fullName>
    <description>This field is used to display the count of Opportunities linked to the Account.</description>
    <label>Number of Opportunities</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>