force-app/main/default/objects/Account/fields/NumberOfUnreachedHappyCalls__c.field-meta.xml
<CustomField>
    <fullName>NumberOfUnreachedHappyCalls__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Store number of unreached happy calls</description>
    <label>Number Of Unreached Happy Calls</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>