force-app/main/default/objects/Account/fields/OtherNationalities__c.field-meta.xml
<CustomField>
    <fullName>OtherNationalities__c</fullName>
    <description>It contains nationality of the customers.</description>
    <label>Other Nationalities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nationality</valueSetName>
    </valueSet>
</CustomField>