force-app/main/default/objects/Account/fields/ParentEmail__c.field-meta.xml
<CustomField>
    <fullName>ParentEmail__c</fullName>
    <description>This field would be pre-populated if the parent email is entered during parents creation.</description>
    <label>Parent Email</label>
    <type>Email</type>
</CustomField>