force-app/main/default/objects/Account/fields/PassportExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>PassportExpiryDate__c</fullName>
    <description>Option to enter the passport expiry date. This field would be a calendar control.</description>
    <label>Passport Expiry Date</label>
    <type>Date</type>
</CustomField>