force-app/main/default/objects/Account/fields/PassportIssueDate__c.field-meta.xml
<CustomField>
    <fullName>PassportIssueDate__c</fullName>
    <description>Option to enter the passport issue date. This field would be a calendar control.</description>
    <label>Passport Issue Date</label>
    <type>Date</type>
</CustomField>