force-app/main/default/objects/Account/fields/PassportNumber__c.field-meta.xml
<CustomField>
    <fullName>PassportNumber__c</fullName>
    <description>Option to enter passport number of the Account.</description>
    <label>Passport Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>