force-app/main/default/objects/Account/fields/PassportType__c.field-meta.xml
<CustomField>
    <fullName>PassportType__c</fullName>
    <description>This field is a dropdown and the values are based on the passport types.</description>
    <label>Passport Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Argentino</fullName>
            </value>
            <value>
                <fullName>Australian</fullName>
            </value>
            <value>
                <fullName>Belgium</fullName>
            </value>
            <value>
                <fullName>BNO</fullName>
            </value>
            <value>
                <fullName>Brazilian Passport</fullName>
            </value>
            <value>
                <fullName>Canadian</fullName>
            </value>
            <value>
                <fullName>China Travel card</fullName>
            </value>
            <value>
                <fullName>Chinese Passport</fullName>
            </value>
            <value>
                <fullName>Diplomatic</fullName>
            </value>
            <value>
                <fullName>European Passport</fullName>
            </value>
            <value>
                <fullName>Europeo</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Greek ID</fullName>
            </value>
            <value>
                <fullName>Greek Passport</fullName>
            </value>
            <value>
                <fullName>HKSAR</fullName>
            </value>
            <value>
                <fullName>Indian</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Macau SAR</fullName>
            </value>
            <value>
                <fullName>Malaysia</fullName>
            </value>
            <value>
                <fullName>National ID Card</fullName>
            </value>
            <value>
                <fullName>New Zealand</fullName>
            </value>
            <value>
                <fullName>Ordinary</fullName>
            </value>
            <value>
                <fullName>Philippine</fullName>
            </value>
            <value>
                <fullName>Portuguese</fullName>
            </value>
            <value>
                <fullName>PRC</fullName>
            </value>
            <value>
                <fullName>Singapore</fullName>
            </value>
            <value>
                <fullName>South Korea</fullName>
            </value>
            <value>
                <fullName>Swedish</fullName>
            </value>
            <value>
                <fullName>Taiwanese</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>