force-app/main/default/objects/Account/fields/PersonalID__c.field-meta.xml
<CustomField>
    <fullName>PersonalID__c</fullName>
    <description>Option to enter the ID number of the Account.</description>
    <label>National ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>