force-app/main/default/objects/Account/fields/PosCustomerContact_id__c.field-meta.xml
<CustomField>
    <fullName>PosCustomerContact_id__c</fullName>
    <description>This field is to hold Poseidon's contact Id</description>
    <externalId>true</externalId>
    <label>PosCustomerContact_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>