force-app/main/default/objects/Account/fields/PoseidonCustomerId__c.field-meta.xml
<CustomField>
    <fullName>PoseidonCustomerId__c</fullName>
    <label>Poseidon Customer Id</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>