force-app/main/default/objects/Account/fields/PoseidonSyncStatus__c.field-meta.xml
<CustomField>
    <fullName>PoseidonSyncStatus__c</fullName>
    <description>Stores Sync status used to determine if record needs to be save to Poseidon</description>
    <label>Poseidon Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Todo</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>