force-app/main/default/objects/Account/fields/ReadyForHappyCall__c.field-meta.xml
<CustomField>
    <fullName>ReadyForHappyCall__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate that we need to make a happy call with this Account</description>
    <label>Ready for Happy Call</label>
    <type>Checkbox</type>
</CustomField>