force-app/main/default/objects/Account/fields/RecalculateRanking__c.field-meta.xml
<CustomField>
    <fullName>RecalculateRanking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used for recalculating the ranking once a new activity for the existing customer is imported</description>
    <label>Recalculate Ranking</label>
    <type>Checkbox</type>
</CustomField>