force-app/main/default/objects/Account/fields/SFDCAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>SFDCAccountNumber__c</fullName>
    <description>Primary use for this field is to assign Account records to System Owners</description>
    <displayFormat>A-{000000000}</displayFormat>
    <label>SFDC Account Number</label>
    <type>AutoNumber</type>
</CustomField>