force-app/main/default/objects/Account/fields/TotalBooking__c.field-meta.xml
<CustomField>
    <fullName>TotalBooking__c</fullName>
    <description>This is used to know how many bookings we have under this account</description>
    <label>TotalBooking</label>
    <summaryForeignKey>Booking__c.AccountId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>