force-app/main/default/objects/Account/recordTypes/Company.recordType-meta.xml
<RecordType>
    <fullName>Company</fullName>
    <active>true</active>
    <description>use this for Companies</description>
    <label>Company</label>
    
</RecordType>