force-app/main/default/objects/Account/validationRules/AccountMandatoryFirstName.validationRule-meta.xml
<ValidationRule>
    <fullName>AccountMandatoryFirstName</fullName>
    <active>true</active>
    <description>This validation rule is used to prompt the user to fill in a First Name when creating thePerson Account.</description>
    <errorConditionFormula>NOT($Setup.BypassTriggersValidation__c.DisableValidation__c) 
&amp;&amp;
IsPersonAccount 
&amp;&amp;
ISBLANK( FirstName )</errorConditionFormula>
    <errorMessage>Please fill in the First Name before saving the Person Account.</errorMessage>
</ValidationRule>