force-app/main/default/objects/Account/validationRules/DoNotUpdateMarketAfterCreation.validationRule-meta.xml
<ValidationRule>
    <fullName>DoNotUpdateMarketAfterCreation</fullName>
    <active>true</active>
    <description>This validation rule is used to restrict Non-Support users from updating the Account Market after Account creation.</description>
    <errorConditionFormula>NOT(ISNEW()) 
&amp;&amp;  
ISCHANGED( Market__c )  
&amp;&amp;
NOT($Setup.BypassTriggersValidation__c.DisableValidation__c)</errorConditionFormula>
    <errorMessage>It is not allowed to change the Market of a Person Account. Please contact Support in case the Market needs to be updated.</errorMessage>
</ValidationRule>