force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>IsParent__c</columns>
    <columns>PC_BIRTHDATE</columns>
    <columns>Age__c</columns>
    <columns>Gender__c</columns>
    <columns>Market__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Accounts</label>
</ListView>